--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/style-resources": "^1.0.0",
-    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.8.2",
     "lodash": "^4.17.20",
     "node-sass": "^5.0.0",
     "nuxt": "^2.14.6",
+    "nuxt-vue-select": "^0.1.4",
     "sass-loader": "^10.1.0"
   },
   "devDependencies": {
